--- a/views/date.erb
+++ b/views/date.erb
@@ -1,3 +1,3 @@
 <h1>Today</h1>
 <% date = Time.now.strftime("%A, %B %d, %Y") %>
-<p><%= "The date is #{date}" %></p>
+<p>The date is <%= date %></p>
